CloudFormation/OnPremiseNetwork/onpremise-infra.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Gytis / This is an On-Premises Network

Parameters:

    EnvironmentName:
        Description: An environment name in parameters
        Type: String

    VpcCIDR:
        Description: VPC CIDR
        Type: String
        Default: 10.0.0.0/16

    PrivateSubnet1CIDR:
        Description: PrivateSubnet1 CIDR
        Type: String
        Default: 10.0.2.0/24

    PrivateSubnet2CIDR:
        Description: PrivateSubnet2 CIDR
        Type: String
        Default: 10.0.3.0/24

    OnPremGateway:
        Description: Please enter the IP address of the on-prem VPN Appliance
        Type: String
        Default: 1.2.3.4

Resources:

    VPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCIDR
            EnableDnsHostnames: true
            Tags:
                - Key: Name
                  Value: !Ref EnvironmentName

    PrivateSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 0, !GetAZs '' ]
            CidrBlock: !Ref PrivateSubnet1CIDR
            MapPublicIpOnLaunch: false
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

    PrivateSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 1, !GetAZs '' ]
            CidrBlock: !Ref PrivateSubnet2CIDR
            MapPublicIpOnLaunch: false
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ2)

    PrivateRouteTable1:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Routes (AZ1)

    DefaultPrivateRoute1:
        Type: AWS::EC2::Route
        DependsOn: AttachVpnGateway
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref VpcVPNGateway

    PrivateSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            SubnetId: !Ref PrivateSubnet1

    PrivateRouteTable2:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Routes (AZ2)

    DefaultPrivateRoute2:
        Type: AWS::EC2::Route
        DependsOn: AttachVpnGateway
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref VpcVPNGateway

    PrivateSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            SubnetId: !Ref PrivateSubnet2

    OurVPN:
        Type: AWS::EC2::VPNConnection
        Properties:
            Type: ipsec.1
            StaticRoutesOnly: true
            CustomerGatewayId:
                !Ref OnPremCustomGateway
            VpnGatewayId:
                !Ref VpcVPNGateway

    VpcVPNGateway:
        Type: AWS::EC2::VPNGateway
        Properties:
            Type: ipsec.1
            Tags:
              - Key: Name
                Value: !Sub "${EnvironmentName} Amazon-side Gateway"

    AttachVpnGateway:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            VpcId:
                !Ref VPC
            VpnGatewayId:
                Ref: VpcVPNGateway
                
    OnPremCustomGateway:
        Type: AWS::EC2::CustomerGateway
        Properties:
            BgpAsn: 65000
            IpAddress: !Ref 'OnPremGateway'
            Type: ipsec.1
            Tags:
              - Key: Name
                Value: !Sub "${EnvironmentName} On Prem Gateway"

Outputs: 

    VPC: 
        Description: A reference to the created VPC
        Value: !Ref VPC
        Export:
          Name: !Sub ${EnvironmentName}-VPCID

    VPCPrivateRouteTable1:
        Description: Private Routing AZ1
        Value: !Ref PrivateRouteTable1
        Export:
          Name: !Sub ${EnvironmentName}-PRI1-RT

    VPCPrivateRouteTable2:
        Description: Private Routing AZ2
        Value: !Ref PrivateRouteTable2
        Export:
          Name: !Sub ${EnvironmentName}-PRI2-RT

    PrivateSubnets:
        Description: A list of the private subnets
        Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
        Export:
          Name: !Sub ${EnvironmentName}-PRIV-NETS

    PrivateSubnet1:
        Description: A reference to the private subnet in the 1st Availability Zone
        Value: !Ref PrivateSubnet1
        Export:
          Name: !Sub ${EnvironmentName}-PRI1-SN

    PrivateSubnet2: 
        Description: A reference to the private subnet in the 2nd Availability Zone
        Value: !Ref PrivateSubnet2
        Export:
          Name: !Sub ${EnvironmentName}-PRI2-SN

    VpcVPNGateway:
        Description: A reference to the created VPNGateway
        Value: !Ref VpcVPNGateway
        Export:
          Name: !Sub ${EnvironmentName}-VPN-GTW-ID

    AttachVpnGateway:
        Description: A reference to the created VPCGatewayAttachment
        Value: !Ref AttachVpnGateway
        Export:
          Name: !Sub ${EnvironmentName}-VPN-GTW-ATT-ID

    OnPremCustomGateway:
        Description: A reference to the created CustomerGateway
        Value: !Ref OnPremCustomGateway
        Export:
          Name: !Sub ${EnvironmentName}-VPN-CUSTOMER-GTW-ID
